src/objects/MDLZ_Promotion_Export_AdBreak__mdt.object
<CustomObject>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <label>Friday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <label>Monday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <label>Saturday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <label>Sunday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <label>Thursday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <label>Tuesday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <label>Wednesday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_End_Sat__c</fullName>
        <label>Week End Sat</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Start_Sun__c</fullName>
        <label>Week Start Sun</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MDLZ Promotion Export AdBreak</label>
    <pluralLabel>MDLZ Promotion Export Adbreaks</pluralLabel>
</CustomObject>